<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Sky</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_show">ShowActivity</string>
    <string name="intent">intent</string>
    <string name="broadcast">broadcast</string>
    <string name="extends_binder">extends binder</string>
    <string name="messager">messager</string>
    <string name="static_method">static method</string>
    <string name="finish">finish</string>
    <string name="moon">moon</string>

</resources>